--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <title>
 SD Negeri Sondo
-</title><meta name=description content="Unggul Dalam Mutu, Teruji Dalam Prestasi."><meta name=author content="Admin">
-<link rel=apple-touch-icon href=/apple-touch-icon.png sizes=180x180>
-<link rel=icon href=/favicon-32x32.png sizes=32x32 type=image/png>
-<link rel=icon href=/favicon-16x16.png sizes=16x16 type=image/png>
+</title><meta name=description content="Unggul Dalam Mutu, Teruji Dalam Prestasi."><meta name=author content="Admin"> <link rel=apple-touch-icon href=/apple-touch-icon.png sizes=180x180> <link rel=icon href=/favicon-32x32.png sizes=32x32 type=image/png> <link rel=icon href=/favicon-16x16.png sizes=16x16 type=image/png> <link rel=manifest href=/manifest.json> <link rel=mask-icon href=/safari-pinned-tab.svg color=#0c344b> <link rel=icon href=/favicon.ico>
+<link rel=apple-touch-icon sizes=57x57 href=/apple-icon-57x57.png>
+<link rel=apple-touch-icon sizes=60x60 href=/apple-icon-60x60.png>
+<link rel=apple-touch-icon sizes=72x72 href=/apple-icon-72x72.png>
+<link rel=apple-touch-icon sizes=76x76 href=/apple-icon-76x76.png>
+<link rel=apple-touch-icon sizes=114x114 href=/apple-icon-114x114.png>
+<link rel=apple-touch-icon sizes=120x120 href=/apple-icon-120x120.png>
+<link rel=apple-touch-icon sizes=144x144 href=/apple-icon-144x144.png>
+<link rel=apple-touch-icon sizes=152x152 href=/apple-icon-152x152.png>
+<link rel=apple-touch-icon sizes=180x180 href=/apple-icon-180x180.png>
+<link rel=icon type=image/png sizes=192x192 href=/android-icon-192x192.png>
+<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
+<link rel=icon type=image/png sizes=96x96 href=/favicon-96x96.png>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
 <link rel=manifest href=/manifest.json>
-<link rel=mask-icon href=/safari-pinned-tab.svg color=#0c344b>
-<link rel=icon href=/favicon.ico>
+<meta name=msapplication-TileColor content="#ffffff">
+<meta name=msapplication-TileImage content="/ms-icon-144x144.png">
+<meta name=theme-color content="#ffffff">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css>
 <link rel=stylesheet href=/dist/main.37ab3f61b95417873748.min.css>
 <link rel=canonical href=https://sdnsondo.github.io/>
 <link href=https://sdnsondo.github.io/index.xml rel=alternate type=application/rss+xml title="SD Negeri Sondo">
-<link href=https://sdnsondo.github.io/index.xml rel=feed type=application/rss+xml title="SD Negeri Sondo"><meta property="og:title" content="SD Negeri Sondo">
+<link href=https://sdnsondo.github.io/index.xml rel=feed type=application/rss+xml title="SD Negeri Sondo"><meta property="og:title" content>
 <meta property="og:description" content="Unggul Dalam Mutu, Teruji Dalam Prestasi.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://sdnsondo.github.io/">
-<meta itemprop=name content="SD Negeri Sondo">
+<meta itemprop=name content>
 <meta itemprop=description content="Unggul Dalam Mutu, Teruji Dalam Prestasi."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="SD Negeri Sondo">
+<meta name=twitter:title content>
 <meta name=twitter:description content="Unggul Dalam Mutu, Teruji Dalam Prestasi.">
 </head>
 <body>
@@ -35,8 +46,8 @@ SD Negeri Sondo
 <div class="collapse navbar-collapse" id=main-menu>
 <ul class="navbar-nav ml-auto">
 <li class=nav-item><a class=nav-link href=/>Home</a></li>
+<li class=nav-item><a class=nav-link href=/artikel>Artikel</a></li>
 <li class=nav-item><a class=nav-link href=/visi-misi/>Visi Misi</a></li>
-<li class=nav-item><a class=nav-link href=/tentang-kami/>Tentang Kami</a></li>
 </ul>
 </div>
 </div>
@@ -47,22 +58,46 @@ SD Negeri Sondo
 <img src=/images/homepage-image.png class=img-fluid>
 </div><h1 class=display-4>SD Negeri Sondo</h1><h3 class=font-weight-normal>Unggul Dalam Mutu, Teruji Dalam Prestasi.</h3></div>
 </div>
+<div class="row py-lg-5">
+<div class="col-auto mx-auto">
+<img src=/images/kepsek.png class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo">
+</div>
+<div class=col>
+<div class="card-block px-2">
+<h4 class=card-title>Sambutan Kepala Sekolah</h4>
+<p class=card-text>
+Di era globalisasi dan pesatnya teknologi informasi, tidak bisa
+dipungkiri bahwa keberadaan sebuah website untuk suatu instansi atau
+organisasi termasu SD Negeri Sondo Kecamatan Monta Kabupaten Bima
+Nusa Tenggara Barat sangatlah penting. Kerena wahana website ini
+dapat digunakan sebagai media penyebarluasan informasi-informasi
+dari sekolah untuk Siswa, Masyarakat dan pihak terkait secara mudah.
+</p>
+<a class=d-block href=/sambutan-kepsek/>Selengkapnya ...</a>
+</div>
+</div>
+</div>
+<div class="latest row py-lg-5">
+<div class="col-lg-6 mb-3"><a href=/posts/gerak-jalan/ class=d-block>
+<img data-src=/images/gerak-jalan_hu4b322c84762de31e7593ab74a49ca049_400369_700x450_fill_box_smart1_3.png class="img-fluid rounded" alt="Gerak Jalan Siswa SDN Sondo">
+</a></div>
+<div class="col-lg-6 mb-3">
+<h5 class="created text-muted text-uppercase font-weight-bold">
+August 2, 2021
+</h5>
+<h2><a href=/posts/gerak-jalan/>Gerak Jalan Siswa SDN Sondo</a></h2>
+<div class=content></div>
+</div>
+</div>
 <div class="articles row row-cols-1 row-cols-lg-3">
 </div>
 </main>
-<footer class="footer text-center bg-dark py-6">
-<div class=container>
-<div class=row>
-<div class=col>
-<ul class=list-inline>
-</ul>
-<p class=text-muted>
+<footer class=bg-white>
+<div class="bg-light py-4">
+<div class="container text-center">
+<p class="text-muted mb-0 py-2">
 Copyright © 2020–2021, SD Negeri Sondo all rights reserved.
 </p>
-<p class=text-muted>
-Powered by <a href=https://gohugo.io target=_blank>Hugo</a> with <a href=https://github.com/puresyntax71/hugo-theme-chunky-poster target=_blank>Chunky Poster</a>.
-</p>
-</div>
 </div>
 </div>
 </footer>
