deploy: 8aa2de39d3f179d6d209f2ed485562f853911e01

--- a/visi-misi/index.html
+++ b/visi-misi/index.html
@@ -3,8 +3,14 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <title>
-Visi Misi | SD Negeri Sondo
-</title><meta name=description content="Visi Misi SD Negeri Sondo"><meta name=author content="Admin"> <link rel=apple-touch-icon href=/apple-touch-icon.png sizes=180x180> <link rel=icon href=/favicon-32x32.png sizes=32x32 type=image/png> <link rel=icon href=/favicon-16x16.png sizes=16x16 type=image/png> <link rel=manifest href=/manifest.json> <link rel=mask-icon href=/safari-pinned-tab.svg color=#0c344b> <link rel=icon href=/favicon.ico>
+Visi Misi |
+SD Negeri Sondo
+</title><meta name=description content="Visi Misi SD Negeri Sondo"><meta name=author content="Admin">
+<link rel=apple-touch-icon href=/%20apple-touch-icon.png sizes=180x180>
+<link rel=icon href=/%20favicon-32x32.png sizes=" 32x32" type=image/png>
+<link rel=icon href=/%20favicon-16x16.png sizes=16x16 type=image/png>
+<link rel=mask-icon href=/%20safari-pinned-tab.svg color=#0c344b>
+<link rel=icon href=/%20favicon.ico>
 <link rel=apple-touch-icon sizes=57x57 href=/apple-icon-57x57.png>
 <link rel=apple-touch-icon sizes=60x60 href=/apple-icon-60x60.png>
 <link rel=apple-touch-icon sizes=72x72 href=/apple-icon-72x72.png>
