fix url and galeri issues

--- a/public/index.html
+++ b/public/index.html
@@ -52,12 +52,12 @@
 
 
 
-<link rel="canonical" href="http://sdnsondo.sch.id/">
-  <link href="http://sdnsondo.sch.id/index.xml" rel="alternate" type="application/rss+xml" title="SD Negeri Sondo">
-  <link href="http://sdnsondo.sch.id/index.xml" rel="feed" type="application/rss+xml" title="SD Negeri Sondo"><meta property="og:title" content="" />
+<link rel="canonical" href="https://sdnsondo.github.io/">
+  <link href="https://sdnsondo.github.io/index.xml" rel="alternate" type="application/rss+xml" title="SD Negeri Sondo">
+  <link href="https://sdnsondo.github.io/index.xml" rel="feed" type="application/rss+xml" title="SD Negeri Sondo"><meta property="og:title" content="" />
 <meta property="og:description" content="Unggul Dalam Mutu, Teruji Dalam Prestasi." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://sdnsondo.sch.id/" />
+<meta property="og:url" content="https://sdnsondo.github.io/" />
 
 <meta itemprop="name" content="">
 <meta itemprop="description" content="Unggul Dalam Mutu, Teruji Dalam Prestasi."><meta name="twitter:card" content="summary"/>
@@ -69,7 +69,7 @@
     
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-sm" id="navbar-main-menu">
     <div class="container">
-        <a class="navbar-brand font-weight-bold" href="http://sdnsondo.sch.id">SD Negeri Sondo</a>
+        <a class="navbar-brand font-weight-bold" href="https://sdnsondo.github.io/">SD Negeri Sondo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
