--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@ SD Negeri Sondo
 <main class="homepage container py-6">
 <div class="hero row">
 <div class="col position-relative py-lg-7 pb-5"><div class=homepage-image>
-<img src=/images/homepage-image.png class=img-fluid>
+<img src=/images/homepage.png class="img-fluid rounded">
 </div><h1 class=display-4>SD Negeri Sondo</h1><h3 class=font-weight-normal>Unggul Dalam Mutu, Teruji Dalam Prestasi.</h3></div>
 </div>
 <div class="row py-lg-5">
 <div class="col-auto mx-auto">
-<img src=/images/kepsek.png class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo">
+<img src=/images/kepsek.jpeg class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo">
 </div>
 <div class=col>
 <div class="card-block px-2">
-<h4 class=card-title>Sambutan Kepala Sekolah</h4>
+<h4 class=card-title>Mahfud S.Pd.</h4>
 <p class=card-text>
 Di era globalisasi dan pesatnya teknologi informasi, tidak bisa
 dipungkiri bahwa keberadaan sebuah website untuk suatu instansi atau
-organisasi termasu SD Negeri Sondo Kecamatan Monta Kabupaten Bima
+organisasi termasuk SD Negeri Sondo Kecamatan Monta Kabupaten Bima
 Nusa Tenggara Barat sangatlah penting. Kerena wahana website ini
 dapat digunakan sebagai media penyebarluasan informasi-informasi
 dari sekolah untuk Siswa, Masyarakat dan pihak terkait secara mudah.
 </p>
-<a class=d-block href=/sambutan-kepsek/>Selengkapnya ...</a>
+<a href=/sambutan-kepsek/>Selengkapnya ...</a>
 </div>
 </div>
 </div>
