--- a/galeri/index.html
+++ b/galeri/index.html
@@ -134,6 +134,21 @@ SD Negeri Sondo
 <img src=13.jpeg class="figure-img img-fluid">
 </a>
 </figure>
+<figure class=figure>
+<a href=14.jpeg class=d-block data-toggle=lightbox data-gallery=post-gallery>
+<img src=14.jpeg class="figure-img img-fluid">
+</a>
+</figure>
+<figure class=figure>
+<a href=15.jpeg class=d-block data-toggle=lightbox data-gallery=post-gallery>
+<img src=15.jpeg class="figure-img img-fluid">
+</a>
+</figure>
+<figure class=figure>
+<a href=16.jpeg class=d-block data-toggle=lightbox data-gallery=post-gallery>
+<img src=16.jpeg class="figure-img img-fluid">
+</a>
+</figure>
 </p>
 </div>
 </div>
