--- a/public/galeri/index.html
+++ b/public/galeri/index.html
@@ -193,6 +193,27 @@
         /> 
     </a>
 </figure>
+
+<figure class="figure">
+    <a href="14.jpeg" class="d-block" data-toggle="lightbox" data-gallery="post-gallery">
+        <img src="14.jpeg"class="figure-img img-fluid"
+        /> 
+    </a>
+</figure>
+
+<figure class="figure">
+    <a href="15.jpeg" class="d-block" data-toggle="lightbox" data-gallery="post-gallery">
+        <img src="15.jpeg"class="figure-img img-fluid"
+        /> 
+    </a>
+</figure>
+
+<figure class="figure">
+    <a href="16.jpeg" class="d-block" data-toggle="lightbox" data-gallery="post-gallery">
+        <img src="16.jpeg"class="figure-img img-fluid"
+        /> 
+    </a>
+</figure>
 </p>
 
                         </div>
